sites/all/themes/lacuna_stories/css/user_profile.css
#user-profile-main
{
	width: 100%;
	font-family: serif;
}

#user-profile-main #user-avatar-space
{
	height: 240px;
	vertical-align: bottom;
	text-align: center;
}
#user-profile-main #user-command-buttons 
{
	margin-bottom: 10px;
}

#user-profile-main #user-command-buttons a, 
#user-profile-main #user-command-buttons a:visited,
#user-profile-main #user-command-buttons a:hover,
#user-profile-main #user-command-buttons a:active
{
	color: inherit;
}

#user-profile-main #user-command-buttons a:not(:first-child)
{
	margin-left: 20px;
}

#user-profile-main #user-avatar-space img
{
	width: 200px;
	height: 200px;
	border: 1px solid #000000;
	border-radius: 100px;
}

#user-profile-main div.column
{
	display: inline-block;
}

#user-profile-main .profile-section
{
	margin-bottom: 20px;
}

#user-profile-main div.left-part
{
	margin-right: 10px;
	vertical-align: top;
	width: 22%;
}
#user-profile-main div.right-part
{
	vertical-align: top;
	width: 75%;
	float: right;
}


#user-profile-main span.caption
{
	font-size: 24px;
	font-weight: bold;
}

#user-profile-main div.field-wrapper
{
	border: 1px solid #000000;
	padding: 10px;
}

#user-profile-main #how-I-Learn-space div.field-wrapper
{
	height: 460px;	
}

#user-profile-main #user-contributions-space div.field-wrapper
{
	height: 100px;
	padding-right: 0;
	padding-bottom: 0;
}

#user-profile-main #user-contributions-space div.field-wrapper:not(:first-child)
{
	margin-top: -1px;	/*	to avoid double-tick borders*/	
}

#user-profile-main #user-bio-space div.field-wrapper
{
	height: 30px
}

#user-profile-main #user-about-space div.field-wrapper, 
#user-profile-main #user-learning-goals-space div.field-wrapper
{
	height: 120px;
}

#user-profile-main div.field-wrapper p
{
	margin: 0;
	font-size: 16px;
}
#user-profile-main div.field-wrapper p.title
{
	font-style: italic;
}
#user-profile-main div.field-wrapper p.no-results
{
	margin-top: 10px;
	font-size: 20px;
}

#user-profile-main #user-learning table
{
    width: 100%;
    margin: 0;
}

#user-profile-main #user-learning table td
{
    text-align: center;
}
#user-profile-main #user-learning table td p
{
    font-style: italic;
}

#user-profile-main #user-learning table td img
{
    border: 1px solid #000;
    border-radius: 8px;
    width: 120px;
    height: 120px;
}

#user-profile-main #user-contributions-space div.field-wrapper .block
{
	overflow-y: scroll;
	height: 75px;
}

